--- a/web/index.html
+++ b/web/index.html
@@ -56,7 +56,7 @@
 <body>
 
 <header>
-    <h1>Welcome to My GitHub Page</h1>
+    <h1>My GitHub Page origin-website</h1>
 </header>
 
 <main>
@@ -70,7 +70,7 @@
 </main>
 
 <footer>
-    <p>Created with ❤️ by I3lackPen</p>
+    <p>Created with ❤️ </p>
 </footer>
 
 </body>
